Give it a little style

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<html>
+    <head>
+        <title>dreynolds.github.io</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    </head>
+    <body>
+        <div class="container">
+            <div>
+                <h1 class="is-size-1">dreynolds.github.io</h1>
+                <p class="is-size-5">Simple test site</p>
+            </div>
+        </div>
+        
+    </body>
+</html>
