Adding gtag to test things out

--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
     <head>
         <title>dreynolds.github.io</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MSH204NG0"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-1MSH204NG0');
+        </script>
     </head>
     <body>
         <div class="container">
