--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         <div class="container">
             <div>
                 <h1 class="is-size-1">dreynolds.github.io</h1>
-                <p class="is-size-5">Simple test site</p>
+                <p class="is-size-5">
+                    <a href="https://stackoverflow.com/users/188709/david-reynolds"><img
+                            src="https://stackoverflow.com/users/flair/188709.png" width="208" height="58"
+                            alt="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
+                            title="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
+                </p>
             </div>
         </div>
         
