Add start of user manual

--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <html>
-    <head>
-        <title>dreynolds.github.io</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MSH204NG0"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
 
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
+<head>
+    <title>dreynolds.github.io</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MSH204NG0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-            gtag('config', 'G-1MSH204NG0');
-        </script>
-    </head>
-    <body>
-        <div class="container">
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-1MSH204NG0');
+    </script>
+</head>
+
+<body>
+    <div class="container">
+        <section class="hero is-small is-primary">
+            <div class="hero-body">
+                <p class="title">
+                    <a href="/">dreynolds.github.io</a>
+                </p>
+            </div>
+        </section>
+        <div class="content">
             <div>
-                <h1 class="is-size-1">dreynolds.github.io</h1>
-                <p class="is-size-5">
-                    <a href="https://stackoverflow.com/users/188709/david-reynolds"><img
-                            src="https://stackoverflow.com/users/flair/188709.png" width="208" height="58"
-                            alt="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
-                            title="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
+                <a href="https://stackoverflow.com/users/188709/david-reynolds"><img
+                        src="https://stackoverflow.com/users/flair/188709.png" width="208" height="58"
+                        alt="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
+                        title="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
                 </p>
             </div>
         </div>
-        
-    </body>
+    </div>
+
+</body>
+
 </html>
