Get the layout working better

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         gtag('config', 'G-1MSH204NG0');
     </script>
+    <style href="/css/style.css"></style>
 </head>
 
 <body>
@@ -28,10 +29,10 @@
         </section>
         <div class="content">
             <div>
-                <a href="https://stackoverflow.com/users/188709/david-reynolds"><img
-                        src="https://stackoverflow.com/users/flair/188709.png" width="208" height="58"
+                <a href="https://stackoverflow.com/users/188709/david-reynolds">
+                    <img src="https://stackoverflow.com/users/flair/188709.png" width="208" height="58"
                         alt="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"
-                        title="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
+                        title="profile for David Reynolds at Stack Overflow, Q&amp;A for professional and enthusiast programmers" /></a>
                 </p>
             </div>
         </div>
