--- a/user-manual.html
+++ b/user-manual.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>dreynolds.github.io</title>
+    <title>David Reynolds User Manual</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MSH204NG0"></script>
@@ -19,62 +19,70 @@
 
 <body>
     <div class="container">
-        <section class="hero is-small is-primary">
-            <div class="hero-body">
-                <p class="title">
-                    <a href="/">dreynolds.github.io</a>
-                </p>
-            </div>
-        </section>
         <div class="content mt-4">
 
             <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <article class="tile is-child notification is-primary is-4">
+                <div class="tile is-parent is-4">
+                    <article class="tile is-child notification is-primary">
                         <p class="title">Hi, I'm David</p>
                         <p class="subtitle">Job title: Senior Software Engineer</p>
                         <p class="subtitle">I live in Norfolk (UK), close to Norwich</p>
+                        <figure class="image">
+                            <img src=" /images/davidr.png" alt="Me standing in front of a wall" class="is-square">
+                        </figure>
                     </article>
-                    <article class="tile is-child notification is-warning is-8">
+                </div>
+                <div class="tile is-parent is-8">
+                    <article class="tile is-child notification is-warning">
                         <p class="title">My working hours</p>
-                        <table class="table">
-                            <tbody>
-                                <tr>
-                                    <th>Mon</th>
-                                    <td>8:30am - 5:30pm</td>
-                                </tr>
-                                <tr>
-                                    <th>Tue</th>
-                                    <td>8:30am - 5:30pm</td>
-                                </tr>
-                                <tr>
-                                    <th>Wed</th>
-                                    <td>8:30am - 5:30pm</td>
-                                </tr>
-                                <tr>
-                                    <th>Thu</th>
-                                    <td>8:30am - 5:30pm</td>
-                                </tr>
-                                <tr>
-                                    <th>Fri</th>
-                                    <td>8:30am - 5:30pm</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <p>Lunchtime generally: 12:30pm - 1:30pm</p>
+                        <div class="tile is-parent">
+                            <div class="tile is-child">
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <th>Mon</th>
+                                            <td>8:30am - 5:30pm</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Tue</th>
+                                            <td>8:30am - 5:30pm</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Wed</th>
+                                            <td>8:30am - 5:30pm</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Thu</th>
+                                            <td>8:30am - 5:30pm</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Fri</th>
+                                            <td>8:30am - 5:30pm</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <p>Lunchtime/dog walk generally: 12:30pm - 1:30pm</p>
+                            </div>
+                            <div class="tile is-child">
+                                <figure class="image">
+                                    <img src="/images/waffle.jpg" alt="Waffle" class="is-square">
+                                </figure>
+                            </div>
+                        </div>
                     </article>
                 </div>
             </div>
+
             <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <article class="tile is-child notification is-warning is-6">
+                <div class="tile is-parent is-5">
+                    <article class="tile is-child notification is-warning">
                         <p class="title">Communication preferences</p>
-                        <div class="card">
+                        <div class="card mb-4">
                             <div class="card-content">
                                 <div class="media">
                                     <div class="media-left">
                                         <figure class="image is-64x64">
-                                            <img src="/images/slack.png" alt="Slack">
+                                            <img src="/images/slack.png" alt="Slack logo">
                                         </figure>
                                     </div>
                                     <div class="media-content">
@@ -85,12 +93,12 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card mb-4">
                             <div class="card-content">
                                 <div class="media">
                                     <div class="media-left">
                                         <figure class="image is-64x64">
-                                            <img src="/images/email.png" alt="Slack">
+                                            <img src="/images/email.png" alt="Generic email icon">
                                         </figure>
                                     </div>
                                     <div class="media-content">
@@ -101,30 +109,38 @@
                             </div>
                         </div>
 
-
-                        <div class="card">
+                        <div class="card mb-4">
                             <div class="card-content">
                                 <div class="media">
                                     <div class="media-left">
                                         <figure class="image is-64x64">
-                                            <img src="/images/zoom.png" alt="Slack">
+                                            <img src="/images/zoom.png" alt="Zoom logo">
                                         </figure>
                                     </div>
                                     <div class="media-content">
                                         <p class="title is-4">Video chat</p>
-                                        <p class="subtitle is-8">for discussions</p>
-                                        <p>Although I prefer to have time to prepare for discussions beforehand</p>
+                                        <p class="subtitle is-8">for discussions &ast;</p>
+                                        <p>&ast; I prefer to have time to prepare for discussions beforehand</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
+                    </article>
+                </div>
+                <div class="tile is-parent is-vertical is-4">
+                    <article class="tile is-child notification is-primary">
+                        <p class="title">Working conditions</p>
+                        <ul>
+                            <li>I like quiet if a task requires intense focus</li>
+                            <li>I like to listen to music when doing repetitive or admin tasks</li>
+                        </ul>
+                    </article>
+                    <article class="tile is-child notification is-primary">
+                        <p class="title">Working conditions</p>
                     </article>
                 </div>
             </div>
-
         </div>
-
 </body>
 
 </html>
