Add extra working hours stuff

--- a/user-manual.html
+++ b/user-manual.html
@@ -61,12 +61,18 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <p>Lunchtime/dog walk generally: 12:30pm - 1:30pm</p>
+                                <p class="subtitle">Focussed time</p>
+                                <p>Early morning before stand up and straight after lunch</p>
+                                <p class="subtitle">Lunchtime</p>
+                                <p>12:30pm - 1:30pm - Usually involves dog walk too</p>
+
                             </div>
                             <div class="tile is-child">
                                 <figure class="image">
                                     <img src="/images/waffle.jpg" alt="Waffle" class="is-square">
+                                    <p>Gratuitous cute dog picture</p>
                                 </figure>
+
                             </div>
                         </div>
                     </article>
