Extra text and alignment issues

--- a/user-manual.html
+++ b/user-manual.html
@@ -26,7 +26,7 @@
                     <article class="tile is-child notification is-primary">
                         <p class="title">Hi, I'm David</p>
                         <p class="subtitle">Job title: Senior Software Engineer</p>
-                        <p class="subtitle">I live in Norfolk (UK), close to Norwich</p>
+                        <p class="subtitle">I live in Norfolk (UK), close to Norwich with my wife, son and dog.</p>
                         <figure class="image">
                             <img src=" /images/davidr.png" alt="Me standing in front of a wall" class="is-square">
                         </figure>
@@ -80,9 +80,9 @@
             </div>
 
             <div class="tile is-ancestor">
-                <div class="tile is-parent is-5">
+                <div class="tile is-parent is-4">
                     <article class="tile is-child notification is-warning">
-                        <p class="title">Communication preferences</p>
+                        <p class="subtitle">Communication preferences</p>
                         <div class="card mb-4">
                             <div class="card-content">
                                 <div class="media">
@@ -135,14 +135,45 @@
                 </div>
                 <div class="tile is-parent is-vertical is-4">
                     <article class="tile is-child notification is-primary">
-                        <p class="title">Working conditions</p>
+                        <p class="subtitle">Working conditions</p>
                         <ul>
                             <li>I like quiet if a task requires intense focus</li>
                             <li>I like to listen to music when doing repetitive or admin tasks</li>
                         </ul>
+                        <figure class="image is-48x48">
+                            <img src="/images/headphones.svg" alt="Generic music icon" class="">
+                        </figure>
                     </article>
+                    <article class=" tile is-child notification is-warning">
+                        <p class="subtitle">How I like feedback</p>
+                        <p>Good or bad, I prefer blunt honesty. I'd rather be clear on the issue so I can
+                            understand it
+                            fully and work towards a solution.</p>
+                        <p>Having a written copy (Slack/Email) so I can digest before having a chance to discuss
+                            works
+                            best for me.</p>
+                    </article>
+                </div>
+
+                <div class="tile is-parent is-vertical is-4">
                     <article class="tile is-child notification is-primary">
-                        <p class="title">Working conditions</p>
+                        <p class="subtitle">What makes me feel good at work?</p>
+                        <ul>
+                            <li>Having the time and space to solve a problem effectively</li>
+                            <li>Openness and honesty</li>
+                            <li>When my team delivers a solution to a problem that is well received by colleagues and
+                                clients</li>
+                        </ul>
+                    </article>
+                    <article class="tile is-child notification notification is-danger">
+                        <p class="subtitle">What makes me feel bad at work?</p>
+                        <ul>
+                            <li>Being dictated a solution to a problem. Using my experience to solve a problem is a part
+                                of my job that I enjoy</li>
+                            <li>Not fully understading the purpose or context of a task</li>
+                            <li>People not owning their mistakes. It's not about blame, but you can't learn if you can't
+                                admit you were wrong</li>
+                        </ul>
                     </article>
                 </div>
             </div>
