--- a/user-manual.html
+++ b/user-manual.html
@@ -177,6 +177,14 @@
                     </article>
                 </div>
             </div>
+            <div class="tile is-ancestor">
+                <div class="tile is-parent">
+                    <article class="tile is-child notification is-warning">
+                        <p class="subtitle">What do I like to do in my spare time?</p>
+
+                    </article>
+                </div>
+            </div>
         </div>
 </body>
 
