Fix mobile layout a bit

--- a/user-manual.html
+++ b/user-manual.html
@@ -3,6 +3,7 @@
 <head>
     <title>David Reynolds User Manual</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MSH204NG0"></script>
     <script>
@@ -19,7 +20,7 @@
 
 <body>
     <div class="container">
-        <div class="content mt-4">
+        <div class="content">
 
             <div class="tile is-ancestor">
                 <div class="tile is-parent is-4">
@@ -86,7 +87,7 @@
                         <div class="card mb-4">
                             <div class="card-content">
                                 <div class="media">
-                                    <div class="media-left">
+                                    <div>
                                         <figure class="image is-64x64">
                                             <img src="/images/slack.png" alt="Slack logo">
                                         </figure>
@@ -102,7 +103,7 @@
                         <div class="card mb-4">
                             <div class="card-content">
                                 <div class="media">
-                                    <div class="media-left">
+                                    <div>
                                         <figure class="image is-64x64">
                                             <img src="/images/email.png" alt="Generic email icon">
                                         </figure>
@@ -118,7 +119,7 @@
                         <div class="card mb-4">
                             <div class="card-content">
                                 <div class="media">
-                                    <div class="media-left">
+                                    <div>
                                         <figure class="image is-64x64">
                                             <img src="/images/zoom.png" alt="Zoom logo">
                                         </figure>
