--- a/user-manual.html
+++ b/user-manual.html
@@ -4,24 +4,11 @@
     <title>David Reynolds User Manual</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MSH204NG0"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-1MSH204NG0');
-    </script>
 </head>
 
 <body>
     <div class="container">
         <div class="content">
-
             <div class="tile is-ancestor">
                 <div class="tile is-parent is-4">
                     <article class="tile is-child notification is-primary">
@@ -80,7 +67,7 @@
                 </div>
             </div>
 
-            <div class="tile is-ancestor">
+            <div class="tile is-ancestor comms">
                 <div class="tile is-parent is-4">
                     <article class="tile is-child notification is-warning">
                         <p class="subtitle">Communication preferences</p>
