Add stand up time

--- a/user-manual.html
+++ b/user-manual.html
@@ -50,7 +50,7 @@
                                     </tbody>
                                 </table>
                                 <p class="subtitle">Focussed time</p>
-                                <p>Early morning before stand up and straight after lunch</p>
+                                <p>Early morning before stand up (10am) and straight after lunch</p>
                                 <p class="subtitle">Lunchtime</p>
                                 <p>12:30pm - 1:30pm - Usually involves dog walk too</p>
 
