More layout shizz

--- a/user-manual.html
+++ b/user-manual.html
@@ -122,15 +122,15 @@
                     </article>
                 </div>
                 <div class="tile is-parent is-vertical is-4">
-                    <article class="tile is-child notification is-primary">
+                    <article class="tile is-child notification is-primary pb-6">
+                        <figure class="image is-64x64 is-pulled-left" style="height: 100% !important">
+                            <img src="/images/headphones.svg" alt="Generic music icon">
+                        </figure>
                         <p class="subtitle">Working conditions</p>
                         <ul>
                             <li>I like quiet if a task requires intense focus</li>
                             <li>I like to listen to music when doing repetitive or admin tasks</li>
                         </ul>
-                        <figure class="image is-48x48">
-                            <img src="/images/headphones.svg" alt="Generic music icon" class="">
-                        </figure>
                     </article>
                     <article class=" tile is-child notification is-warning">
                         <p class="subtitle">How I like feedback</p>
@@ -140,6 +140,14 @@
                         <p>Having a written copy (Slack/Email) so I can digest before having a chance to discuss
                             works
                             best for me.</p>
+                    </article>
+                    <article class=" tile is-child notification is-primary">
+                        <p class="subtitle">Meyers-Briggs Type</p>
+                        <p>My Meyers-Briggs type (if you like that kind of thing) is: </p>
+                        <p class="has-text-centered has-text-weight-bold is-family-monospace"><a
+                                href="https://www.16personalities.com/istj-personality" target="_blank">Turbulent
+                                Logistician (ISTJ-T)</a>
+                        </p>
                     </article>
                 </div>
 
@@ -165,14 +173,27 @@
                     </article>
                 </div>
             </div>
-            <div class="tile is-ancestor">
+            <!-- <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <article class="tile is-child notification is-warning">
                         <p class="subtitle">What do I like to do in my spare time?</p>
-
+                        <div class="tile is-ancestor">
+                            <div class="tile is-parent">
+                                <article class="tile is-child notification is-primary"></article>
+                            </div>
+                            <div class="tile is-parent">
+                                <article class="tile is-child notification is-primary"></article>
+                            </div>
+                            <div class="tile is-parent">
+                                <article class="tile is-child notification is-primary"></article>
+                            </div>
+                            <div class="tile is-parent">
+                                <article class="tile is-child notification is-primary"></article>
+                            </div>
+                        </div>
                     </article>
                 </div>
-            </div>
+            </div> -->
         </div>
 </body>
 
