--- a/user-manual.html
+++ b/user-manual.html
@@ -13,7 +13,7 @@
                 <div class="tile is-parent is-4">
                     <article class="tile is-child notification is-primary">
                         <p class="title">Hi, I'm David</p>
-                        <p class="subtitle">Job title: Senior Software Engineer</p>
+                        <p class="subtitle">Job title: Head of Engineers</p>
                         <p class="subtitle">I live in Norfolk (UK), close to Norwich with my wife, son and dog.</p>
                         <figure class="image">
                             <img src=" /images/davidr.png" alt="Me standing in front of a wall" class="is-square">
@@ -45,7 +45,7 @@
                                         </tr>
                                         <tr>
                                             <th>Fri</th>
-                                            <td>8:30am - 5:30pm</td>
+                                            <td>8:30am - 12:30pm</td>
                                         </tr>
                                     </tbody>
                                 </table>
